--- a/.mergify.yml
+++ b/.mergify.yml
@@ -4,5 +4,6 @@ pull_request_rules:
       - "#approved-reviews-by>=1"
     actions:
       merge:
-        method: rebase
+        method: squash
         strict: smart
+        strict_method: rebase
